<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encuesta">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/tvUsuarioRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNombreRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTotalPagarRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPreguntaUno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvPregunta1"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPreguntaUno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPregunta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPregunta2"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/cbFutbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbFutbol" />

        <CheckBox
            android:id="@+id/cbBasquet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbBasquet" />

        <CheckBox
            android:id="@+id/cbTennis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbTenis" />

        <TextView
            android:id="@+id/tvPregunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPregunta3"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbSi" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbNo" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrarDatos"
            android:text="@string/btnEnviar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>