<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvUsuario" />

        <TextView
            android:id="@+id/tvUsuarioRecividoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombre"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/HintIngreseSuNombre"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvMontoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvMontoInicial"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txtMontoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintMontoInicial"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPagoMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagoMensual"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txtPagoMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pagoMensual"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonCalcular" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>