<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resumen">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            app:srcCompat="@drawable/download" />

        <TextView
            android:id="@+id/tvUsuarioR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvUsuarioR"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvUsuarioRecibido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNombreR"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvNombreRecibido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTotalpagoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTotalPagarR"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvTotalApagarRecibido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvRespuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRespuesta1"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtRespuesta11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvRespuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRespuesta2"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCb11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txtCb22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txtCb33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvPregunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPregunta3"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRb11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txtRb22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>